Link to page_pool doc from people.org
Testing if github renders this correctly into a link

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/people.org
+++ b/people.org
@@ -63,6 +63,8 @@ Developers unsorted:
 
 ** page_pool
 
+Proposal for evolving API see: [[file://areas/mem/page_pool01_evolving_API.org]]
+
 People interested in working on page_pool API:
  - Tariq Toukan <tariqt@mellanox.com> / <ttoukan.linux@gmail.com>
  - Ilias Apalodimas <ilias.apalodimas@linaro.org>
