--- a/areas/arm64/arm02_cross_compile_setup.org
+++ b/areas/arm64/arm02_cross_compile_setup.org
@@ -1,5 +1,5 @@
 # -*- fill-column: 79; -*-
-#+Title: Setup ARM cross compile on build server
+#+Title: Setup ARM cross compiler on build server
 
 Notes on howto get cross compiler working for ARM64.
 
