Add link to espressobin homepage
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_espressobin01_setup.org
+++ b/areas/arm64/board_espressobin01_setup.org
@@ -1,4 +1,7 @@
-#+Title: Setup espressobin
+#+Title: Setup notes for board espressobin
+
+The Espressobin board homepage:
+ - http://espressobin.net/tech-spec/
 
 * NIC driver
 
