U-Boot output from Jesper's board
We suspect that Ilias'es board isn't running at 1000 MHz, provide
my U-Boot output here.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_espressobin01_setup.org
+++ b/areas/arm64/board_espressobin01_setup.org
@@ -68,6 +68,11 @@ http://wiki.espressobin.net/tiki-index.php?page=Boot+from+removable+storage+-+Ub
 
 * Board info in U-Boot
 
+After you press the reset key on your ESPRESSObin board, the system
+should reboot, and you see something like this via the serial console
+cable.
+
+Jesper's board:
 #+BEGIN_EXAMPLE
 U-Boot 2017.03-armada-17.10.2-g14aeedc (Jun 01 2018 - 15:39:10 +0800)
 
